# Ship-Information-Retrieval-System

./: .env.example  .gitignore  README.md  api_server.py  config.example.py  main.py  pyproject.toml  requirements.txt
docs/: 01_LLM_INITIALIZATION.md  FASTAPI_SIMPLE_GUIDE.md  GITHUB_SIMPLE_GUIDE.md  GIT_UPDATE_FILES_SIMPLE.md  LANGCHAIN_DESIGN.md  LANGGRAPH_FLOW.md  LANGGRAPH_GRAPH.md  LANGGRAPH_RAG_INTEGRATION_TEMPLATE.md  PROJECT_STRUCTURE.md
examples/: 01_init_llm.py  02_record_question_node.py  03_record_ai_answer.py  04_router_memory_chat.py  05_graph_flow_test.py
frontend/: app.py
memory/: chat_records.example.json
src/API/: __init__.py  app.py
src/LangChain/: __init__.py  agent.py  config.py  model.py  prompts.py  tools.py
src/LangGraph/: __init__.py  flow.py  graph.py  memory_store.py  nodes.py  rag_adapter.py  router.py  states.py
src/hsu/: INTEGRATION.md  README.md  __init__.py  api.py  bm25_search.py  config.example.py  generator.py  image_processor.py  main.py  pdf_loader.py  query_rewriter.py  requirements.txt  reranker.py  retriever.py  vectorstore.py
