[project]
name = "ship-langchain-core"
version = "0.1.0"
description = "LangChain core for the ship engineering retrieval system"
requires-python = ">=3.11"
dependencies = [
    "langchain>=1.0,<2.0",
    "langchain-openai>=1.0,<2.0",
    "fastapi>=0.115,<1.0",
    "pydantic>=2.10,<3.0",
    "pydantic-settings>=2.7,<3.0",
    "python-dotenv>=1.0,<2.0",
    "uvicorn>=0.30,<1.0",
]
